--- a/literature.bib
+++ b/literature.bib
@@ -451,6 +451,21 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   url          = {https://www.rfc-editor.org/info/rfc7165},
 }
 
+@TechReport{Jones2015,
+  author = {Jones, Michael},
+  title  = {JSON web algorithms (JWA)},
+  year   = {2015},
+  url    = {https://www.rfc-editor.org/rfc/rfc7518},
+}
+
+@TechReport{Barker2017,
+  author = {Barker, Elaine and Chen, Lily and Keller, Sharon and Roginsky, Allen and Vassilev, Apostol and Davis, Richard},
+  title  = {Recommendation for pair-wise key-establishment schemes using discrete logarithm cryptography},
+  year   = {2017},
+  school = {National Institute of Standards and Technology},
+  url    = {https://csrc.nist.gov/CSRC/media/Publications/sp/800-56a/rev-3/draft/documents/sp800-56ar3-draft.pdf},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
