--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,9 @@
 
 \begin{document}
 
+\todo{Abkürzungen}
+\todo{Safekeeper vs Overseer; Clotiled vs Display --> einheitlich!}
+
 % Cover, abstract, table of contents, etc.
 \subfile{./zyx/preface.tex}
 
@@ -37,6 +40,6 @@
 % Add and appendix to the document
 \cleardoublepage
 \appendix
-\subfile{./txt/99-lipsum.tex}
+\subfile{./txt/8-appendix.tex}
 
 \end{document}
