--- a/txt/2-terms-and-defintions.tex
+++ b/txt/2-terms-and-defintions.tex
@@ -4,12 +4,16 @@
 
 \chapter{Terms and Definitions}
 \section{AEAD}
+\label{sec:aead}
 
 \section{Key escrow}
+\label{sec:key-escrow}
 
 \section{Certificate revocation problem}
+\label{sec:crp}
 
 \section{Surreptitious Forwarding}
+\label{sec:surreptitious-forwarding}
 Qulle here~\cite{Davis2001}
 
 \section{End-to-end encryption} 
