--- a/main.tex
+++ b/main.tex
@@ -30,9 +30,10 @@
 \subfile{./txt/2-terms-and-defintions.tex}
 \subfile{./txt/3-requirements.tex}
 \subfile{./txt/4-overview-solutions.tex}
-\subfile{./txt/5-approach.tex}
-\subfile{./txt/6-evaluation.tex}
-\subfile{./txt/7-conclusion.tex}
+\subfile{./txt/5-protocol-design.tex}
+\subfile{./txt/6-implemented-libraries.tex}
+\subfile{./txt/7-evaluation.tex}
+\subfile{./txt/8-conclusion.tex}
 
 % Bibliography, list of tables, list of figures, etc.
 \subfile{./zyx/epilogue.tex}
@@ -40,6 +41,6 @@
 % Add and appendix to the document
 \cleardoublepage
 \appendix
-\subfile{./txt/8-appendix.tex}
+\subfile{./txt/99-appendix.tex}
 
 \end{document}
