--- a/txt/2-terms-and-defintions.tex
+++ b/txt/2-terms-and-defintions.tex
@@ -12,6 +12,13 @@
 \section{Certificate revocation problem}
 \label{sec:crp}
 
+\section{Certificate revocation problem}
+\label{sec:crp}
+
+\section{JOSE}
+% - overview jose: cite from Barnes2014
+% - investigate JWS and JWE as subsections?
+
 \section{Surreptitious Forwarding}
 \label{sec:surreptitious-forwarding}
 Qulle here~\cite{Davis2001}
