--- a/literature.bib
+++ b/literature.bib
@@ -466,6 +466,13 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   url    = {https://csrc.nist.gov/CSRC/media/Publications/sp/800-56a/rev-3/draft/documents/sp800-56ar3-draft.pdf},
 }
 
+@TechReport{Jones2015a,
+  author = {Jones, Michael and Bradley, John and Sakimura, Nat},
+  title  = {Json web token (JWT)},
+  year   = {2015},
+  url    = {https://www.rfc-editor.org/rfc/rfc7519},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
