--- a/txt/4-overview-solutions.tex
+++ b/txt/4-overview-solutions.tex
@@ -9,8 +9,9 @@ This chapter theoretically elaborates on different approaches to implementing th
 The sketched protocols illustrate different encryption techniques.
 Each section details the consequences of the technique to the requirements of this thesis.
 The outcome of this chapter is a set of possible solution strategies.
+Additionally, section~\ref{sec:justification} justifies why hybrid encryption is chosen as encryption technique in this thesis.
 
-The following table summarizes the results of this chapter.
+The following table summarizes the major results of this chapter.
 It provides an overview for the reader.
 A check (\checkmark) indicates that a approach satisfies the corresponding requirement.
 A missing check means that the approach conflicts with the requirement.
@@ -415,5 +416,44 @@ Either the user handles this manually (this conflicts with usability) or a trust
 In both ways the requirements of this thesis can not be met.
 A possible solution to fix this is the implementation and distribution of the Clotilde frontend as an app.
 This way, a secure session could be established among users and the shared secret could be securely stored in dedicated secure hardware storages which are not available in browsers.
+
+\section{Justification of hybrid encryption}
+\label{sec:justification}
+The protocol designed in this thesis relies on hybrid encryption.
+The purpose of this section is the justification of this encryption technique.
+Recall table \ref{tab:overview-summary}, where different approaches were evaluated under the given requirements.
+The table visualizes the fulfillment of the requirements of each considered approach.
+Hybrid encryption satisfies all functional and security requirements.
+Only the non-functional performance criterion N4 can not be fully met because the symmetric key needs to be encrypted for all receivers.
+The following argumentation illustrates why hybrid encryption is nevertheless the most promising approach.
+
+First of all, hybrid encryption improves mutual encryption because it avoids encrypting application data with asymmetric cryptography.
+Instead of encrypting a log multiple times under different public keys, hybrid encryption applies fast symmetric algorithms to encrypt the log.
+It then additionally encrypts the symmetric key under the public keys of the receivers.
+This adheres to currently proposed best practices in applying cryptography~\cite[340]{Eckert2018}.
+The performance difference might not be noticeable in the current protocol because the encrypted logs do not contain a lot of information.
+However, the usage of hybrid encryption ensures that the encryption is still performant if the logs are extended in the future.
+Notice that there is no difference in terms of security and functionality between the approaches.
+Thus, hybrid encryption outperforms mutual encryption.
+
+Another option to implement the intended protocol is based on broadcast encryption techniques that encrypt data for multiple receivers.
+As elaborated in section \ref{sec:broadcast-encryption}, different approaches are proposed to implement broadcast encryption.
+In general, there is no need to encrypt data $n$ times when it needs to be decrypted by $n$ users in those schemes.
+Considering the non-functional criterion N4 (minimal resource utilization), broadcast encryption, therefore, outperforms hybrid encryption.
+The main disadvantage of broadcast encryption is the missing standardization.
+Specifically, the Web Cryptographic API does not include any of those schemes.
+Thus, they can only be used in the browser if the reference implementations are translated into Javascript.
+Since Javascript is an interpreted language, however, this comes with considerable performance limitations.
+Moreover, the cryptographic library implemented in this thesis needs to be delivered in three programming languages.
+Translating a dedicated scheme into multiple languages is complex, error-prone, and not realizable within the time constraint of this thesis.
+Please also notice that each approach introduced in section \ref{sec:broadcast-encryption} additionally suffers from security limitations undermining the understanding of E2EE.
+Since hybrid encryption relies on standardized and well-researched algorithms, it is preferred over broadcast encryption techniques.
+
+A third option is an implementation based on a key server.
+The log is encrypted with a symmetric scheme and access to the decryption key is maintained by a key server.
+This approach only relies on well-researched symmetric encryption techniques.
+It can therefore be implemented in different programming languages and environments.
+A key server, however, introduces key escrow which harms the intended E2EE.
+This is a major drawback compared to hybrid encryption.
 
 \end{document}
